# projects_generator

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.docker/: Dockerfile
.github/workflows/: build_cmake.yml  docker-publish.yml  format.yml  main.yml
imgui_templates/: CMakeLists.txt.inja  imgui.cpp.inja  imgui.hpp.inja  main.cpp.inja  vcpkg.json.inja
include/: projects_generator.hpp  templates.hpp  utils.hpp
resources/: projects_generator.desktop
scripts/: apprun.sh  build_appimage.sh  findlink.sh
src/: main.cpp  projects_generator.cpp  utils.cpp
templates/: config.yaml
templates/imgui/: CMakeLists.txt.inja  imgui.hpp.inja  vcpkg.json.inja
test/: CMakeLists.txt  test_utils.cpp
